mobile hr1 & 2 spacing fix

--- a/webphone.css
+++ b/webphone.css
@@ -22,6 +22,7 @@ input[type="submit"]{
 	font-size: 18px;
 	height: 18px;
 	clear: both !important;
+	margin-bottom: 8px;
 }
 #hr1{
         margin-top: 20%;
